[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/Roboto-BoldItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Prefabs/ui/Icon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/misc/Square 40x40.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/Unit/AbilityVico.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 0.15 )
border_color = Color( 1, 1, 1, 0.65 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.2 )
border_color = Color( 1, 1, 1, 0.65 )

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0.1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.08 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0.04 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.0392157 )
draw_center = false

[sub_resource type="DynamicFont" id=4]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="AbilityVico" type="MarginContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 4 )

[node name="bg" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Lock" parent="MarginContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 6.0
margin_top = 6.0
margin_right = 34.0
margin_bottom = 34.0
rect_min_size = Vector2( 28, 28 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Cooldown" type="MarginContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="bg" type="Panel" parent="MarginContainer/Cooldown"]
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 3 )

[node name="cooldown progress" type="TextureProgress" parent="MarginContainer/Cooldown"]
margin_right = 40.0
margin_bottom = 40.0
value = 57.0
texture_progress = ExtResource( 3 )
fill_mode = 5
tint_progress = Color( 0, 0, 0, 1 )

[node name="cooldown text" type="Label" parent="MarginContainer/Cooldown"]
unique_name_in_owner = true
margin_top = 10.0
margin_right = 40.0
margin_bottom = 29.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "10"
align = 1

[node name="casting border" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color( 0, 1, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.66 )
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 10 )

[node name="Button" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 40.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[node name="hotkey label" type="Label" parent="Button"]
unique_name_in_owner = true
margin_left = 2.0
margin_top = -5.0
margin_right = 34.0
margin_bottom = 12.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "F"

[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
